@@ -1,5 +1,13 @@
 2007-02-06  Scott James Remnant  <scott@netsplit.com>
 
+	* init/job.c (job_change_state): Reset the goal_event to NULL when
+	we catch a run-away job (as it's not stopping for the same event
+	it started with).
+	(job_child_reaper): Reset the goal_event to NULL after setting the
+	goal to STOP.
+	* init/tests/test_job.c (test_change_state, test_child_reaper):
+	Check that the goal event gets reset whenever the goal gets changed.
+
 	* init/tests/test_event.c: Use TEST_ALLOC_FAIL
 
 	* init/event.c (event_match): Match arguments using fnmatch() and
